FreedomSanboxAntDeploy/src/objects/Score_Card_Analysis__c.object
<CustomObject>
    <description>This object will store the score card range – master.</description>
    <fields>
        <fullName>Analysis_Commentary__c</fullName>
        <label>Analysis Commentary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inserted_From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inserted From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSynched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSynched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Parent_Entity__c</fullName>
        <label>Portal Parent Entity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>Question_Bank__c</referenceTo>
        <relationshipLabel>Score Card Analysis</relationshipLabel>
        <relationshipName>Score_Card_Analysis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Score_Card_End_Range__c</fullName>
        <label>Score Card End Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_Card_Start_Range__c</fullName>
        <label>Score Card Start Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synched_Date_Time__c</fullName>
        <label>Synched Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Score Card Analysis</label>
    <nameField>
        <label>Score Card Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Score Card Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>